<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <!--Toolbar-->
    <include layout="@layout/tool_bar" />

    <!--内容部分
    layout_behavior:用来控制内容区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/activity_margin">

        <!--这里不能用maxlength限制最长字符数
        因为我们这里用户名还有邮箱-->
        <EditText
            android:id="@+id/et_username"
            style="@style/EditText"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
        
        <Button
            android:id="@+id/bt_login"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            android:background="@drawable/selector_color_primary_reverse"
            android:text="@string/login"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>


        <Button
            android:id="@+id/bt_forget_password"
            android:elevation="0dp"
            android:textColor="@color/light_grey"
            android:background="@color/transparent"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/forget_password"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>